--- a/index.html
+++ b/index.html
@@ -4,24 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet" type="text/css" />
-<style>
-    body{
-        direction: rtl;
-        
-        font-family: Vazirmatn;
-    }
-</style>
+    <title>digisample</title>
+    <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css"          
+     rel="stylesheet" type="text/css" />
+     <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
 
-    <!-- container -->
-    <!-- Document object Model (DOM) -->
-    <!-- Root -->
-    <p>
-       <img src="images/Intel_logo_(2006-2020).jpg" alt="Intel_logo_">
-        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
-    </p>
+<body>
+    <h1>digisample</h1>
+    <p>دیجی سمپل بازارگاه و فروشگاه آنلاینی در ایران و مستقر در تهران است.
+         این پلت‌فرم تجارت الکترونیکی طیف گسترده ای از کالاهای مصرفی را ارائه میدهد که شامل کالاهای ورزشی و سرگرمی، لوازم الکترونیکی، مواد غذایی، محصولات شخصی و محصولات دیجیتال با خدمات تحویل سریع است </p>
+    
 </body>
 </html>
