--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
-<html lang="fa">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>digisample</title>
-    <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css"          
-     rel="stylesheet" type="text/css" />
-     <link rel="stylesheet" href="style/style.css">
+    <title>First Project</title>
+    <!-- <link rel="stylesheet" href="style/style.css"> -->
+    <link rel="stylesheet" href="style/style(1).css">
 </head>
-
+indent
+Container
 <body>
-    <h1>digisample</h1>
-    <p>دیجی سمپل بازارگاه و فروشگاه آنلاینی در ایران و مستقر در تهران است.
-         این پلت‌فرم تجارت الکترونیکی طیف گسترده ای از کالاهای مصرفی را ارائه میدهد که شامل کالاهای ورزشی و سرگرمی، لوازم الکترونیکی، مواد غذایی، محصولات شخصی و محصولات دیجیتال با خدمات تحویل سریع است </p>
-    
+    <h1>First Project</h1>
+    <h2>sample for css</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo esse doloremque tempore eos unde dolor cum
+        aliquam, <mark>id eaque harum! Ducimus iure repudiandae voluptatum nostrum! Incidunt temporibus iste animi voluptates?</mark> 
+    </p>
+    <p>Lorem ipsum dolor sit amet <span> consectetur adipisicing elit.</span> Reprehenderit doloremque est non veritatis
+        ea,<b>corrupti</b> 
+        omnis suscipit. Ab ad <i>incidunt optio</i> incidunt optio perferendis obcaecati laborum maiores temporibus nam<em>architecto placeat!</em> 
+        <span>Repellat?</span>
+    </p>
+    <p>This is a paragraph(block level HTML Tag)<span>This a span</span> <span>another one</span>
+        <!-- span is not block level -->
+    <p>this is another paragraph</p>
+    </p>
+
 </body>
+
 </html>
